# Kau-3info3

Livraria/: pyproject.toml
Livraria/core/: admin.py  models.py
Livraria/core/migrations/: 0001_initial.py
Livraria/livraria/: settings.py
